--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Olá eu sou o Fábio Nicollas</h1>
             <p>A.K.A RyuuDev, Desenvolvedor Front-End Junior</p>
             <div>
-                <a id="download" href="CV/Currículo Atualizado.pdf" donwload>Donwload CV</a>
+                <a id="download" href="CV/Currículo Atualizado.docx" donwload>Donwload CV</a>
                 <a id="contact" href="https://wa.me/5577981315735/?text=Quero%20você%20na%20minha%20empresa">Entrar em contato</a>
             </div>
         </div>
