Versão 2.0 do Portfolio

--- a/index.html
+++ b/index.html
@@ -29,13 +29,20 @@
         <img src="imgs/undraw_Lost_online_re_upmy 1.svg" alt="Ilustração">
     </main>
     <section id="about-me">
-        <h2>Sobre mim</h2>
-        <p>
-            Olá! Sou RyuuDev e tenho 20 anos de idade a procura da primeira vaga de Desenvolvedor Web, 
-            eu estudo programação sozinho a 1 ano, mas ja cheguei a fazer alguns cursos da area. Desde então 
-            venho aprendendo cada vez mais sozinho e com muita prática. Todos os meus projetos abaixo foram 
-            desafios que peguei da comunidade Codelândia e do site FrontendMentor.
-        </p>
+        <div id="about-me-container">
+            <img id="perfil" src="imgs/20200919_124740.jpg" alt="Foto de Perfil">
+            <h2>Sobre Mim</h2>
+            <p>
+                Olá! Sou RyuuDev e tenho 20 anos de idade a procura da primeira vaga de Desenvolvedor Web, 
+                eu estudo programação sozinho a 1 ano, mas ja cheguei a fazer alguns cursos da area. Desde então 
+                venho aprendendo cada vez mais sozinho e com muita prática. Todos os meus projetos abaixo foram 
+                desafios que peguei da comunidade Codelândia e do site FrontendMentor.
+            </p>
+            <div>
+                <a id="github" href=""><span></span>Github</a>
+                <a id="linkedin" href="">LinkedIn</a>
+            </div>
+        </div>
         <div id="info-container">
             <div>
                 <img src="imgs/smile.svg" alt="Emoji do Sorriso">
@@ -62,30 +69,41 @@
     <section id="projects">
         <h2>Projetos</h2>
         <div id="projects-container">
-            <div class="project-card">
-                <a target="_blank" href="sites/Desafio25/index.html"><img src="tumbnails/Capturar.PNG" alt=""></a>
-                <h5>Homeyou</h5>
-                <p>Tecnologias: CSS3, HTML5</p>
+            <div id="projects-container-main">
+                <div class="project-card">
+                    <img src="tumbnails/Capturar.PNG" alt="">
+                    <div>
+                        <h5>Homeyou</h5>
+                        <p>Tecnologias: CSS3, HTML5</p>
+                        <a class="details" href="sites/Projetos/Desafio25/intro.html">Detalhes</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="tumbnails/Capturar2.PNG" alt="">
+                    <div>
+                        <h5>Jordan Shoes</h5>
+                        <p>Tecnologias:JavaScript, CSS3, HTML5</p>
+                        <a class="details" href="sites/Projetos/Desafio02/intro.html">Detalhes</a>
+                    </div>
+                </div>
             </div>
             <div class="project-card">
-                <a target="_blank" href="sites/Desafio02/" href="#"><img src="tumbnails/Capturar2.PNG" alt=""></a>
-                <h5>Jordan Shoes</h5>
-                <p>Tecnologias:JavaScript, CSS3, HTML5</p>
-            </div>
-            <div class="project-card">
-                <a target="_blank" href="sites/Desafio05/" href="#"><img src="tumbnails/Capturar3.PNG" alt=""></a>
+                <img src="tumbnails/Capturar3.PNG" alt="">
                 <h5>A viagem de Chihiro</h5>
                 <p>Tecnologias:JavaScript, CSS3, HTML5</p>
+                <a class="details" href="sites/Projetos/Desafio05/intro.html">Detalhes</a>
             </div>
             <div class="project-card">
-                <a target="_blank" href="sites/Desafio07/" href="#"><img src="tumbnails/Capturar4.PNG" alt=""></a>
+                <img src="tumbnails/Capturar4.PNG" alt="">
                 <h5>Valorant</h5>
                 <p>Tecnologias:JavaScript, CSS3, HTML5</p>
+                <a class="details" href="sites/Projetos/Desafio07/intro.html">Detalhes</a>
             </div>
             <div class="project-card">
-                <a target="_blank" href="sites/Desafio08/" href="#"><img src="tumbnails/Capturar5.PNG" alt=""></a>
+                <img src="tumbnails/Capturar5.PNG" alt="">
                 <h5>CodeMoji</h5>
                 <p>Tecnologias:JavaScript, CSS3, HTML5</p>
+                <a class="details" href="sites/Projetos/Desafio08/intro.html">Detalhes</a>
             </div>
             <div class="project-card empty">
                 <img id="empty" src="imgs/code-solid.svg" alt="">
