--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
             </div>
         </div>
         <div id="info-container">
-            <div>
+            <div class="info-card">
                 <img src="imgs/smile.svg" alt="Emoji do Sorriso">
                 <h4>Meu Nome</h4>
                 <p>Fábio Nicollas</p>
             </div>
-            <div>
+            <div class="info-card">
                 <img src="imgs/mail.svg" alt="Ícone do E-mail">
                 <h4>E-mail</h4>
                 <p>fabionicollassilva@gmail.com</p>
             </div>
-            <div>
+            <div class="info-card">
                 <img src="imgs/instagram.svg" alt="Ícone do Instagram">
                 <h4>Instagram</h4>
                 <p>@ryuudev</p>
             </div>
-            <div>
+            <div class="info-card">
                 <img src="imgs/phone.svg" alt="Ícone do Whatsapp">
                 <h4>Whatsapp</h4>
                 <p>(77) 98131-5735</p>
