--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 desafios que peguei da comunidade Codelândia e do site FrontendMentor.
             </p>
             <div>
-                <a id="github" href="https://github.com/RyuuDev-12/">Github</a>
-                <a id="linkedin" href="https://www.linkedin.com/in/f%C3%A1bio-nicollas-silva-de-sousa-25b986236">LinkedIn</a>
+                <a target="_blank" id="github" href="https://github.com/RyuuDev-12/">Github</a>
+                <a target="_blank" id="linkedin" href="https://www.linkedin.com/in/f%C3%A1bio-nicollas-silva-de-sousa-25b986236">LinkedIn</a>
             </div>
         </div>
         <div id="info-container">
