--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>A.K.A RyuuDev, Desenvolvedor Front-End Junior</p>
             <div>
                 <a id="download" href="CV/Currículo Atualizado.docx" donwload>Donwload CV</a>
-                <a id="contact" href="https://wa.me/5577981315735/?text=Quero%20você%20na%20minha%20empresa">Entrar em contato</a>
+                <a target="_blank" id="contact" href="https://wa.me/5577981315735/?text=Quero%20você%20na%20minha%20empresa">Entrar em contato</a>
             </div>
         </div>
         <img src="imgs/undraw_Lost_online_re_upmy 1.svg" alt="Ilustração">
