--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <div class="project-card">
                     <img src="tumbnails/Capturar.PNG" alt="">
                     <div>
-                        <h5>Homeyou</h5>
-                        <p>Tecnologias: CSS3, HTML5</p>
-                        <a class="details" href="sites/Projetos/Desafio25/intro.html">Detalhes</a>
+                        <h5>Cronômetro.js</h5>
+                        <p>Tecnologias: Javascript, CSS3, HTML5</p>
+                        <a class="details" href="sites/Projetos/cronometro/intro.html">Detalhes</a>
                     </div>
                 </div>
                 <div class="project-card">
