--- a/sites/Projetos/cronometro/intro.html
+++ b/sites/Projetos/cronometro/intro.html
@@ -9,13 +9,11 @@
 <body>
     <a href="../../../index.html">< Voltar</a>
     <main>
-        <h1>Homeyou</h1>
+        <h1>Cronômetro.js</h1>
         <p>
-            Este projeto foi um desafio tirado do
-            site FrontendMentor, ele foi feito com
-            o propósito de testar minhas Habilidades
-            gerais HTML e CSS. Simula o site de uma 
-            empresa contadora.
+            Este projeto foi desenvolido completamente por mim em apenas uma noite, é 
+            um cronômetro totalmente funcional, o design foi inspirado no cronômetro 
+            do canal do youtube Matheus Battisti.
         </p>
         <h2>Tecnologias:</h2>
         <ul>
@@ -23,10 +21,10 @@
             <li>CSS3</li>
         </ul>
         <div>
-            <a id="github" target="_blank" href="https://github.com/RyuuDev-12/Desafio25-homeyou">GitHub</a>
-            <a id="access" target="_blank" href="site/index.html">Acessar</a>
+            <a id="github" target="_blank" href="https://github.com/RyuuDev-12/cronometro.js">GitHub</a>
+            <a id="access" target="_blank" href="https://ryuudev-12.github.io/cronometro.js/">Acessar</a>
         </div>
-        <img src="../../../tumbnails/Capturar.PNG" alt="Demonstração do Projeto">
+        <img src="../../../tumbnails/Capturar6.png" alt="Demonstração do Projeto">
     </main>
     <script src="intro.js"></script>
 </body>
