--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div id="projects-container">
             <div id="projects-container-main">
                 <div class="project-card">
-                    <img src="tumbnails/Capturar.PNG" alt="">
+                    <img src="tumbnails/Capturar6.PNG" alt="">
                     <div>
                         <h5>Cronômetro.js</h5>
                         <p>Tecnologias: Javascript, CSS3, HTML5</p>
