--- a/sites/Projetos/cronometro/intro.html
+++ b/sites/Projetos/cronometro/intro.html
@@ -24,7 +24,7 @@
             <a id="github" target="_blank" href="https://github.com/RyuuDev-12/cronometro.js">GitHub</a>
             <a id="access" target="_blank" href="https://ryuudev-12.github.io/cronometro.js/">Acessar</a>
         </div>
-        <img src="../../../tumbnails/Capturar6.png" alt="Demonstração do Projeto">
+        <img src="../../../tumbnails/Capturar6.PNG" alt="Demonstração do Projeto">
     </main>
     <script src="intro.js"></script>
 </body>
