--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio RyuuDev</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imgs/favicon-32x32.png" type="favicon.ico">
 </head>
 <body>
     <header>
