Acrescentando imagem de logo no cabeçalho

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h3>Portfólio</h3>
+        <h3><img id="icon" src="imgs/favicon-32x32.png" alt="Ícone de Logo"/>Portfólio</h3>
         <button class="btn-mobile"></button>
         <div id="link-container">
             <a href="#about-me">Sobre mim</a>
