Renomeando imagens, alterando estilos, alterando links internos/externos, alterando nome do desenvolvedor e adicionando novas habilidades

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio RyuuDev</title>
+    <title>Fábio Nicollas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imgs/favicon-32x32.png" type="favicon.ico">
 </head>
 <body>
     <header>
-        <h3><img id="logo" src="imgs/apple-touch-icon.png" alt="Ícone do Fábio">Portfólio</h3>
+        <h3>
+            <img id="logo" src="imgs/apple-touch-icon.png" alt="Ícone do Fábio">
+            Fábio Dev
+        </h3>
         <button class="btn-mobile"></button>
         <div id="link-container">
             <a href="#about-me">Sobre mim</a>
@@ -21,20 +24,20 @@
     <main>
         <div>
             <h1>Olá eu sou o Fábio Nicollas</h1>
-            <p>A.K.A RyuuDev, Desenvolvedor Front-End Junior</p>
+            <p>Desenvolvedor Front-End</p>
             <div>
                 <a id="download" href="CV/Currículo Atualizado.docx" donwload>Donwload CV</a>
                 <a id="contact" href="https://wa.me/5577981315735/?text=Quero%20você%20na%20minha%20empresa">Entrar em contato</a>
             </div>
         </div>
-        <img src="imgs/undraw_Lost_online_re_upmy 1.svg" alt="Ilustração">
+        <img src="imgs/ilustration.svg" alt="Ilustração">
     </main>
     <section id="about-me">
         <div id="about-me-container">
-            <img id="perfil" src="imgs/20200919_124740.jpg" alt="Foto de Perfil">
+            <img id="perfil" src="imgs/perfil.jpg" alt="Foto de Perfil">
             <h2>Sobre Mim</h2>
             <p>
-                Olá! Sou RyuuDev e tenho 20 anos de idade a procura da primeira vaga de Desenvolvedor Web, 
+                Olá! Sou Fábio e tenho 20 anos de idade a procura da primeira vaga de Desenvolvedor Web, 
                 eu estudo programação sozinho a 1 ano, mas ja cheguei a fazer alguns cursos da area. Desde então 
                 venho aprendendo cada vez mais sozinho e com muita prática. Todos os meus projetos abaixo foram 
                 desafios que peguei da comunidade Codelândia e do site FrontendMentor.
@@ -46,7 +49,7 @@
         </div>
         <div id="info-container">
             <div class="info-card">
-                <img src="imgs/smile.svg" alt="Emoji do Sorriso">
+                <img src="imgs/smile.svg" alt="Emoji de Sorriso">
                 <h4>Meu Nome</h4>
                 <p>Fábio Nicollas</p>
             </div>
@@ -72,42 +75,48 @@
         <div id="projects-container">
             <div id="projects-container-main">
                 <div class="project-card">
-                    <img src="tumbnails/Capturar.PNG" alt="">
+                    <img src="tumbnails/buscacep.png" alt="Foto do Projeto">
                     <div>
-                        <h5>Homeyou</h5>
-                        <p>Tecnologias: CSS3, HTML5</p>
-                        <a class="details" href="sites/Projetos/Desafio25/intro.html">Detalhes</a>
+                        <h5>Busca Cep</h5>
+                        <p>Tecnologias: ReactJS, CSS3, JavaScript, HTML5</p>
+                        <a class="details" href="sites/Projetos/buscacep/intro.html">Detalhes</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="tumbnails/Capturar2.PNG" alt="">
+                    <img src="tumbnails/cronometro.PNG" alt="Foto do Projeto">
                     <div>
-                        <h5>Jordan Shoes</h5>
-                        <p>Tecnologias:JavaScript, CSS3, HTML5</p>
-                        <a class="details" href="sites/Projetos/Desafio02/intro.html">Detalhes</a>
+                        <h5>Cronômetro Js</h5>
+                        <p>Tecnologias: CSS3, HTML5, Javascript</p>
+                        <a class="details" href="sites/Projetos/cronometro/intro.html">Detalhes</a>
                     </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="tumbnails/Capturar3.PNG" alt="">
+                <img src="tumbnails/jordan-shoes.PNG" alt="Foto do Projeto">
+                <h5>Jordan Shoes</h5>
+                <p>Tecnologias:JavaScript, CSS3, HTML5</p>
+                <a class="details" href="sites/Projetos/Desafio02/intro.html">Detalhes</a>
+            </div>
+            <div class="project-card">
+                <img src="tumbnails/chihiro.PNG" alt="Foto do Projeto">
                 <h5>A viagem de Chihiro</h5>
                 <p>Tecnologias:JavaScript, CSS3, HTML5</p>
                 <a class="details" href="sites/Projetos/Desafio05/intro.html">Detalhes</a>
             </div>
             <div class="project-card">
-                <img src="tumbnails/Capturar4.PNG" alt="">
+                <img src="tumbnails/valorant.PNG" alt="Foto do Projeto">
                 <h5>Valorant</h5>
                 <p>Tecnologias:JavaScript, CSS3, HTML5</p>
                 <a class="details" href="sites/Projetos/Desafio07/intro.html">Detalhes</a>
             </div>
             <div class="project-card">
-                <img src="tumbnails/Capturar5.PNG" alt="">
+                <img src="tumbnails/memoji.PNG" alt="Foto do Projeto">
                 <h5>CodeMoji</h5>
                 <p>Tecnologias:JavaScript, CSS3, HTML5</p>
                 <a class="details" href="sites/Projetos/Desafio08/intro.html">Detalhes</a>
             </div>
             <div class="project-card empty">
-                <img id="empty" src="imgs/code-solid.svg" alt="">
+                <img id="empty" src="imgs/code-solid.svg" alt="Foto do Projeto">
                 <h5>Em andamento...</h5>
                 <p>Esse projeto ainda está sendo desenvolvido.</p>
             </div>
@@ -116,26 +125,31 @@
     <section id="services">
         <h2>Serviços</h2>
         <div id="services-container">
-            <div id="service-card">
-                <img src="imgs/code.svg" alt="Ícone de HTML">
+            <div class="service-card">
+                <img src="imgs/code.svg" alt="Ilustração de Código">
                 <h3>Criação de sites</h3>
             </div>
-            <div id="service-card">
-                <img src="imgs/smartphone.svg" alt="Ícone de HTML">
+            <div class="service-card">
+                <img src="imgs/smartphone.svg" alt="Ilustração de Smartphone">
                 <h3>Sites Responsivos</h3>
             </div>
-            <div id="service-card">
-                <img src="imgs/magic.svg" alt="Ícone de HTML">
+            <div class="service-card">
+                <img src="imgs/magic.svg" alt="Ilustração de Mágica">
                 <h3>Interação JS</h3>
+            </div>
+            <div class="service-card">
+                <img src="imgs/figma.svg" alt="Íconde do Figma">
+                <h3>Criação de Design</h3>
             </div>
         </div>
     </section>
     <section id="skills">
         <h2>Minhas Habilidades</h2>
         <div id="skills-container">
-            <img src="imgs/icomoon-free_html-five.svg" alt="">
-            <img id="css-icon" src="imgs/fontisto_css3.svg" alt="">
-            <img src="imgs/akar-icons_javascript-fill.svg" alt="">
+            <img src="imgs/html5-icon.svg" alt="Ícone do HTML5">
+            <img id="css-icon" src="imgs/css3-icon.svg" alt="Ícone do CSS3">
+            <img src="imgs/javascript-icon.svg" alt="Ícone do JavaScript">
+            <img src="imgs/react.svg" alt="Ícone do ReactJS">
         </div>
     </section>
     <footer>
