--- a/sites/Projetos/buscacep/intro.html
+++ b/sites/Projetos/buscacep/intro.html
@@ -10,22 +10,23 @@
 <body>
     <a href="../../../index.html">< Voltar</a>
     <main>
-        <h1>Valorant</h1>
+        <h1>Busca Cep</h1>
         <p>
-            Uma página web dedicada ao FPS Valorant, design da comunidade Codelândia. 
-            Desenvolvido com o objetivo de criar e aplicar ideias de interações JavaScript.
+            Este é meu primeiro projeto em ReactJS, uma aplicação 
+            para achar seu CEP bastante simples com fetch API, React-Router 
+            e React-icons.
         </p>
         <h2>Tecnologias:</h2>
         <ul>
+            <li>ReactJS</li>
             <li>HTML5</li>
             <li>CSS3</li>
-            <li>JavaScript</li>
         </ul>
         <div>
-            <a id="github" target="_blank" href="https://github.com/RyuuDev-12/Desafio07">GitHub</a>
-            <a id="access" target="_blank" href="site/index.html">Acessar</a>
+            <a id="github" target="_blank" href="https://github.com/RyuuDev-12/Busca-Cep">GitHub</a>
+            <a id="access" target="_blank" href="https://ryuudev-12.github.io/Busca-Cep/">Acessar</a>
         </div>
-        <img src="../../../tumbnails/valorant.PNG" alt="Demonstração do Projeto">
+        <img src="../../../tumbnails/buscacep.PNG" alt="Imagem do Projeto">
     </main>
     <script src="intro.js"></script>
 </body>
