--- a/sites/Projetos/cronometro/intro.html
+++ b/sites/Projetos/cronometro/intro.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes</title>
+    <link rel="shortcut icon" href="../../../imgs/favicon-32x32.png" type="favicon.ico">
     <link rel="stylesheet" href="intro.css">
+    <title>Detalhes</title>
 </head>
 <body>
     <a href="../../../index.html">< Voltar</a>
     <main>
-        <h1>Homeyou</h1>
+        <h1>Cronômetro.js</h1>
         <p>
-            Este projeto foi um desafio tirado do
-            site FrontendMentor, ele foi feito com
-            o propósito de testar minhas Habilidades
-            gerais HTML e CSS. Simula o site de uma 
-            empresa contadora.
+            Este projeto é um Projeto em Javascript para testar 
+            minhas habilidades e ter certeza do meu conhecimento e 
+            fluência na linguagem.
         </p>
         <h2>Tecnologias:</h2>
         <ul>
+            <li>JavaScript</li>
             <li>HTML5</li>
             <li>CSS3</li>
         </ul>
         <div>
-            <a id="github" target="_blank" href="https://github.com/RyuuDev-12/Desafio25-homeyou">GitHub</a>
-            <a id="access" target="_blank" href="site/index.html">Acessar</a>
+            <a id="github" target="_blank" href="https://github.com/RyuuDev-12/cronometro.js">GitHub</a>
+            <a id="access" target="_blank" href="https://ryuudev-12.github.io/cronometro.js/">Acessar</a>
         </div>
-        <img src="../../../tumbnails/Capturar.PNG" alt="Demonstração do Projeto">
+        <img src="../../../tumbnails/cronometro.PNG" alt="Demonstração do Projeto">
     </main>
     <script src="intro.js"></script>
 </body>
