--- a/sites/Projetos/Desafio05/intro.html
+++ b/sites/Projetos/Desafio05/intro.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes</title>
+    <link rel="shortcut icon" href="../../../imgs/favicon-32x32.png" type="favicon.ico">
     <link rel="stylesheet" href="intro.css">
+    <title>Detalhes</title>
 </head>
 <body>
     <a href="../../../index.html">< Voltar</a>
@@ -25,7 +26,7 @@
             <a id="github" target="_blank" href="https://github.com/RyuuDev-12/Desafio05-chihiro">GitHub</a>
             <a id="access" target="_blank" href="site/index.html">Acessar</a>
         </div>
-        <img src="../../../tumbnails/Capturar3.PNG" alt="Demonstração do Projeto">
+        <img src="../../../tumbnails/chihiro.PNG" alt="Demonstração do Projeto">
     </main>
     <script src="intro.js"></script>
 </body>
